--- a/imports/client/css/ultisite.less
+++ b/imports/client/css/ultisite.less
@@ -1,6 +1,6 @@
 @import './colors.less';
 @import './material-icons.less';
-@import '../design/hallunken.design.less';
+@import './design.less';
 @import './_editing.less';
 @import './blog.less';
 @import './header.less';
@@ -220,8 +220,8 @@ label {
     }
     img {
       position: absolute;
-      height: 120px;
-      margin: 10px;
+      height: 100%;
+      margin: 0px;
     }
   }
 }
