fixd some icons and team creation

--- a/imports/client/css/ultisite.less
+++ b/imports/client/css/ultisite.less
@@ -137,7 +137,7 @@ label {
   line-height: 33px;
 }
 
-.btn-floating {
+button.btn.btn-floating {
   width: 60px;
   height: 60px;
   line-height: 46px;
