--- a/imports/client/css/material-icons.less
+++ b/imports/client/css/material-icons.less
@@ -7,7 +7,7 @@
     url(/fonts/SelectedMaterialIcons.woff2) format('woff2');
 }
 // font link for download
-// https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=add,angle_left,arrow_downward,arrow_drop_down,arrow_drop_up,arrow_left,arrow_upward,camera,car,check,check_circle,chevron_left,chevron_right,close,code,comment,data_usage,delete,diversity_1,download,edit,edit_calendar,empty,euro,exclamation_triangle,eye,female,file,files,filter,folder,folder_open,format_align,format_align_center,format_align_justify,format_align_left,format_align_right,format_bold,format_color_text,format_h1,format_italic,format_list_bulleted,format_list_numbered,format_strikethrough,format_underlined,group,help,history,home,image,info,info_circle,ink_eraser,link,list,location_on,login,logout,magic,mail,male,map,mark_email_read,menu,minimize,money,more_vert,offline,person,person_4,phone,schedule,search,select_check_box,send,settings,shuffle,sort_by_alpha,square,subdirectory_arrow_left,trophy,videocam
+// https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=add,angle_left,arrow_downward,arrow_drop_down,arrow_drop_up,arrow_left,arrow_upward,camera,car,check,check_circle,chevron_left,chevron_right,close,code,comment,data_usage,delete,diversity_1,download,edit,edit_calendar,empty,euro,exclamation_triangle,eye,female,file,files,filter,folder,folder_open,format_align,format_align_center,format_align_justify,format_align_left,format_align_right,format_bold,format_color_text,format_h1,format_italic,format_list_bulleted,format_list_numbered,format_strikethrough,format_underlined,group,group_add,help,history,home,image,info,ink_eraser,link,list,location_on,login,logout,magic,mail,male,map,mark_email_read,menu,minimize,money,more_vert,offline,person,person_add,phone,schedule,search,select_check_box,send,settings,shield_person,shuffle,sort_by_alpha,square,subdirectory_arrow_left,trophy,videocam
 
 .fa.fa-fw {
   width:24px;
@@ -61,7 +61,7 @@
 .fa.fa-align-justify:before { content:'format_align_justify'}
 .fa.fa-align-left:before { content:'format_align_left'}
 .fa.fa-align-right:before { content:'format_align_right'}
-.fa.fa-angle-left:before { content:'angle_left'}
+.fa.fa-angle-left:before { content:'chevron_left'}
 .fa.fa-arrow-left:before { content:'arrow_left'}
 .fa.fa-bars:before { content:'menu'}
 .fa.fa-bold:before { content:'format_bold'}
@@ -96,11 +96,12 @@
 .fa.fa-folder-open-o:before { content:'folder_open'}
 .fa.fa-github:before { content:'code'}
 .fa.fa-group:before { content:'group'}
+.fa.fa-group-add:before { content:'group_add'}
 .fa.fa-header:before { content:'format_h1'}
 .fa.fa-home:before { content:'home'}
 .fa.fa-image:before { content:'image'}
 .fa.fa-info:before { content:'info'}
-.fa.fa-info-circle:before { content:'info_circle'}
+.fa.fa-info-circle:before { content:'info'}
 .fa.fa-italic:before { content:'format_italic'}
 .fa.fa-level-up:before { content:'subdirectory_arrow_left'}
 .fa.fa-line-chart:before { content:'history'}
@@ -133,7 +134,8 @@
 .fa.fa-trophy:before { content:'trophy'}
 .fa.fa-underline:before { content:'format_underlined'}
 .fa.fa-user:before { content:'person'}
-.fa.fa-user-secret:before { content:'person_4'}
+.fa.fa-user-add:before { content:'person_add'}
+.fa.fa-user-secret:before { content:'shield_person'}
 .fa.fa-users:before { content:'group'}
 .fa.fa-venus:before { content:'female'}
 .fa.fa-mars:before { content:'male'}
