--- a/imports/client/css/material-icons.less
+++ b/imports/client/css/material-icons.less
@@ -7,7 +7,7 @@
     url(/fonts/SelectedMaterialIcons.woff2) format('woff2');
 }
 // font link for download
-// https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=add,angle_left,arrow_downward,arrow_drop_down,arrow_drop_up,arrow_left,arrow_upward,camera,car,check,check_circle,chevron_left,chevron_right,close,code,comment,data_usage,delete,diversity_1,download,edit,edit_calendar,empty,euro,exclamation_triangle,female,file,files,filter,folder,folder_open,format_align,format_align_center,format_align_justify,format_align_left,format_align_right,format_bold,format_color_text,format_h1,format_italic,format_list_bulleted,format_list_numbered,format_strikethrough,format_underlined,group,group_add,help,history,home,image,info,ink_eraser,link,list,location_on,login,logout,magic,mail,male,map,mark_email_read,menu,minimize,money,more_vert,offline,person,person_add,phone,schedule,search,select_check_box,send,settings,shield_person,shuffle,sort_by_alpha,square,subdirectory_arrow_left,trophy,universal_currency,videocam,visibility,visibility_off
+// https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=add,angle_left,arrow_downward,arrow_drop_down,arrow_drop_up,arrow_left,arrow_upward,camera,car,check,check_circle,chevron_left,chevron_right,close,code,comment,data_usage,delete,diversity_1,download,edit,edit_calendar,empty,euro,exclamation_triangle,female,file,files,filter,folder,folder_open,format_align,format_align_center,format_align_justify,format_align_left,format_align_right,format_bold,format_color_text,format_h1,format_italic,format_list_bulleted,format_list_numbered,format_strikethrough,format_underlined,group,group_add,help,history,home,image,info,ink_eraser,link,list,location_on,login,logout,magic,mail,male,map,mark_email_read,menu,minimize,money,more_vert,offline,person,person_add,phone,schedule,search,select_check_box,send,settings,shield_person,shuffle,sort_by_alpha,square,subdirectory_arrow_left,trophy,universal_currency,videocam,visibility,visibility_off,wand_stars
 
 .fa.fa-fw {
   width:24px;
@@ -82,7 +82,7 @@
 .fa.fa-download:before { content:'download'}
 .fa.fa-edit:before { content:'edit'}
 .fa.fa-ellipsis-v:before { content:'more_vert'}
-.fa.fa-empty:before { content:'empty'}
+.fa.fa-empty:before { content:' '}
 .fa.fa-envelope:before { content:'mark_email_read'}
 .fa.fa-envelope-o:before { content:'mail'}
 .fa.fa-eraser:before { content:'ink_eraser'}
@@ -109,7 +109,7 @@
 .fa.fa-list:before { content:'list'}
 .fa.fa-list-ol:before { content:'format_list_numbered'}
 .fa.fa-list-ul:before { content:'format_list_bulleted'}
-.fa.fa-magic:before { content:'magic'}
+.fa.fa-magic:before { content:'wand_stars'}
 .fa.fa-map-marker:before { content:'location_on'}
 .fa.fa-map-o:before { content:'map'}
 .fa.fa-money:before { content:'universal_currency'}
