fix missing icons

--- a/imports/client/css/material-icons.less
+++ b/imports/client/css/material-icons.less
@@ -7,7 +7,7 @@
     url(/fonts/SelectedMaterialIcons.woff2) format('woff2');
 }
 // font link for download
-// https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=add,angle_left,arrow_downward,arrow_drop_down,arrow_drop_up,arrow_left,arrow_upward,camera,car,check,check_circle,chevron_left,chevron_right,close,code,comment,data_usage,delete,diversity_1,download,edit,edit_calendar,empty,euro,exclamation_triangle,female,file,files,filter,folder,folder_open,format_align,format_align_center,format_align_justify,format_align_left,format_align_right,format_bold,format_color_text,format_h1,format_italic,format_list_bulleted,format_list_numbered,format_strikethrough,format_underlined,group,group_add,help,history,home,image,info,ink_eraser,link,list,location_on,login,logout,magic,mail,male,map,mark_email_read,menu,minimize,money,more_vert,offline,person,person_add,phone,schedule,search,select_check_box,send,settings,shield_person,shuffle,sort_by_alpha,square,subdirectory_arrow_left,trophy,universal_currency,videocam,visibility,visibility_off,wand_stars
+// https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=add,angle_left,arrow_downward,arrow_drop_down,arrow_drop_up,arrow_left,arrow_upward,camera,check,check_circle,chevron_left,chevron_right,close,cloud,cloud_off,code,comment,data_usage,delete,directions_car,diversity_1,download,draft,edit,edit_calendar,empty,error,euro,female,file,files,filter,folder,folder_open,format_align,format_align_center,format_align_justify,format_align_left,format_align_right,format_bold,format_color_text,format_h1,format_italic,format_list_bulleted,format_list_numbered,format_strikethrough,format_underlined,group,group_add,help,history,home,image,info,ink_eraser,link,list,location_on,login,logout,magic,mail,male,map,mark_email_read,menu,minimize,money,more_vert,offline,person,person_add,phone,schedule,search,select_check_box,send,settings,shield_person,shuffle,sort_by_alpha,square,subdirectory_arrow_left,trophy,universal_currency,videocam,visibility,visibility_off,wand_stars,warning
 
 .fa.fa-fw {
   width:24px;
@@ -56,7 +56,6 @@
 }
 
 
-.fa.fa-align-:before { content:'format_align'}
 .fa.fa-align-center:before { content:'format_align_center'}
 .fa.fa-align-justify:before { content:'format_align_justify'}
 .fa.fa-align-left:before { content:'format_align_left'}
@@ -67,7 +66,7 @@
 .fa.fa-bold:before { content:'format_bold'}
 .fa.fa-calendar:before { content:'edit_calendar'}
 .fa.fa-camera:before { content:'camera'}
-.fa.fa-car:before { content:'car'}
+.fa.fa-car:before { content:'directions_car'}
 .fa.fa-caret-down:before { content:'arrow_drop_down'}
 .fa.fa-caret-up:before { content:'arrow_drop_up'}
 .fa.fa-check:before { content:'check'}
@@ -87,9 +86,9 @@
 .fa.fa-envelope-o:before { content:'mail'}
 .fa.fa-eraser:before { content:'ink_eraser'}
 .fa.fa-eur:before { content:'euro'}
-.fa.fa-exclamation-triangle:before { content:'exclamation_triangle'}
+.fa.fa-exclamation-triangle:before { content:'warning'}
 .fa.fa-eye:before { content:'visibility'}
-.fa.fa-file:before { content:'file'}
+.fa.fa-file:before { content:'draft'}
 .fa.fa-files-o:before { content:'files'}
 .fa.fa-filter:before { content:'filter'}
 .fa.fa-folder-o:before { content:'folder'}
@@ -113,7 +112,7 @@
 .fa.fa-map-marker:before { content:'location_on'}
 .fa.fa-map-o:before { content:'map'}
 .fa.fa-money:before { content:'universal_currency'}
-.fa.fa-offline:before { content:'signal_wifi_off'}
+.fa.fa-offline:before { content:'cloud_off'}
 .fa.fa-paint-brush:before { content:'format_color_text'}
 .fa.fa-phone:before { content:'phone'}
 .fa.fa-plus:before { content:'add'}
